examples/misc/error/compilation/gen_alloc-tmp-array.bfml
let main = [
  $alloc {
    a: array(3) { x }
  }
  + a:x
]